自定义侧滑删除，运用到的知识点，第二种ViewHolder的方法，listview.setOnScrollListener关闭侧滑，ViewDragHelper，onInterceptTouchEvent，onTouchEvent，onFinishInflate，onSizeChanged，定义了一个Manager类记录打开或者关闭

--- a/customize/build.gradle
+++ b/customize/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     // swipeback基于fragmentation, 如果是自定制SupportActivity/Fragment，则参照SwipeBackActivity/Fragment实现即可
     //    compile 'me.yokeyword:fragmentation-swipeback:{version}'
     implementation files('libs/nineoldandroids-2.4.0.jar')
+    implementation files('libs/pinyin4j-2.5.0.jar')
 }
