--- a/frame/build.gradle
+++ b/frame/build.gradle
@@ -25,18 +25,17 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     //fragment管理
     api 'me.yokeyword:fragmentation:1.3.6'
     api 'me.yokeyword:fragmentation-swipeback:1.3.6'
     // 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，完整的添加规则如下：
-//    compile 'me.yokeyword:fragmentation:{version}'
-// swipeback基于fragmentation, 如果是自定制SupportActivity/Fragment，则参照SwipeBackActivity/Fragment实现即可
-//    compile 'me.yokeyword:fragmentation-swipeback:{version}'
+    //    compile 'me.yokeyword:fragmentation:{version}'
+    // swipeback基于fragmentation, 如果是自定制SupportActivity/Fragment，则参照SwipeBackActivity/Fragment实现即可
+    //    compile 'me.yokeyword:fragmentation-swipeback:{version}'
+    implementation 'com.zhy:okhttputils:2.6.2'
 }
