--- a/frame/src/main/AndroidManifest.xml
+++ b/frame/src/main/AndroidManifest.xml
@@ -1,2 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hong.frame" />
+    package="com.example.hong.frame" >
+</manifest>
