优酷旋转的按钮的 特效 这里用到了fragment跳转fragment

--- a/customize/src/main/AndroidManifest.xml
+++ b/customize/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hong.customize" />
+    package="com.example.hong.customize" >
+    <application>
+        <activity android:name=".youkutexiao.YouKu">
+        </activity>
+    </application>
+</manifest>
