下落选择的红能 这里用到了PopupWindow的知识点

--- a/features/src/main/AndroidManifest.xml
+++ b/features/src/main/AndroidManifest.xml
@@ -1,2 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hong.features" />
+    package="com.example.hong.features" >
+    <application>
+        <activity android:name=".xialaxuanzekuang.DropDown"/>
+    </application>
+</manifest>
