--- a/frame/src/main/AndroidManifest.xml
+++ b/frame/src/main/AndroidManifest.xml
@@ -1,3 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hong.frame" >
+    <application>
+        <activity android:name=".fragment.EventBus.EventBusMain"/>
+        <activity android:name=".fragment.EventBus.EventBusSendActivity"/>
+    </application>
 </manifest>
