RecyclerView的使用方法 1、使用了样式中统一设计所有的分割线 2、瀑布效果 3、随机标题文字

--- a/frame/build.gradle
+++ b/frame/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.zhy:okhttputils:2.6.2'
     implementation files('lib/eventbus-3.0.0.jar')
     implementation files('lib/eventbus-3.0.0-sources.jar')
+    compile 'com.android.support:recyclerview-v7:26.+'
 }
