Glide加载照片的各种方法 1、使用了transformations的特效类库让照片有特效 2、recyclerview的照片加载中使用使用到了anim里的自定义缩放特效

--- a/frame/src/main/AndroidManifest.xml
+++ b/frame/src/main/AndroidManifest.xml
@@ -1,9 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hong.frame" >
+    package="com.example.hong.frame">
+
     <application>
-        <activity android:name=".fragment.EventBus.EventBusMain"/>
-        <activity android:name=".fragment.EventBus.EventBusSendActivity"/>
-        <activity android:name=".fragment.recyclerview.RecyclerViewMian"
-            android:theme="@style/listDividerTheme"/>
+        <activity android:name=".fragment.EventBus.EventBusMain" />
+        <activity android:name=".fragment.EventBus.EventBusSendActivity" />
+        <activity
+            android:name=".fragment.recyclerview.RecyclerViewMian"
+            android:theme="@style/listDividerTheme" />
+        <activity android:name=".fragment.glide.GlideRecyclerviewActivity" />
+        <activity android:name=".fragment.glide.GlideBaseActivity" />
+        <activity android:name=".fragment.glide.GlideMain" />
+        <activity android:name=".fragment.glide.GlideTranformationsActivity"></activity>
     </application>
+
 </manifest>
