--- a/frame/build.gradle
+++ b/frame/build.gradle
@@ -27,6 +27,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -42,4 +43,7 @@ dependencies {
     implementation files('lib/eventbus-3.0.0.jar')
     implementation files('lib/eventbus-3.0.0-sources.jar')
     compile 'com.android.support:recyclerview-v7:26.+'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile project(path: ':customize')
+    compile 'jp.wasabeef:glide-transformations:2.0.1'
 }
